<resources>
    <string name="app_name">PROGRAM ŻUŻLOWY APP</string>
    <string name="nr1">1:</string>
    <string name="nr2">2:</string>
    <string name="nr3">3:</string>
    <string name="nr4">4:</string>
    <string name="nr5">5:</string>
    <string name="nr6">6:</string>
    <string name="nr7">7:</string>
    <string name="nr9">9:</string>
    <string name="nr10">10:</string>
    <string name="nr11">11:</string>
    <string name="nr12">12:</string>
    <string name="nr13">13:</string>
    <string name="nr14">14:</string>
    <string name="nr15">15:</string>
</resources>
